# phone-recommend

./: README.md
be/: .gitignore  README.md  pyproject.toml  seed_phones.py
be/app/: config.py  database.py  logging_config.py  main.py
be/app/api/: __init__.py  messages.py  threads.py
be/app/models/: __init__.py  base.py  message.py  phone.py  thread.py
be/app/services/: chat_service.py  llm_service.py  phone_service.py
be/app/tools/: __init__.py  search_phones.py
be/app/utils/: __init__.py  datetime.py
be/docs/: PHONE_SEARCH_TOOL.md
fe/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts
fe/src/: App.tsx  index.scss  index.tsx
fe/src/components/ChatArea/: index.tsx
fe/src/components/ChatItem/: index.tsx
fe/src/components/Sidebar/: index.tsx
fe/src/hooks/: useThreads.ts
fe/src/services/: api.ts  mockService.ts
fe/src/styles/: variables.scss
fe/src/types/: index.ts
