
[project]
name = "phone-recommend-backend"
version = "0.1.0"
description = "Phone Recommendation AI Agent backend service"
readme = "README.md"
authors = [{ name = "Phone Recommend" }]
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "python-multipart==0.0.20",
    "motor==3.7.1",
    "pymongo==4.15.3",
    "langchain==1.0.5",
    "openai==2.7.1",
    "python-dotenv==1.2.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.1.0",
    "langchain-openai>=1.0.2",
]

[project.optional-dependencies]
dev = ["ruff==0.1.14"]
